other/add-nodeSelector/.chainsaw-test/pod-resources-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  nodeSelector:
    foo: bar
    color: orange
  containers:
  - name: bb
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  nodeSelector:
    foo: bar
    bar: foo
    color: orange
  containers:
  - name: bb
    image: ghcr.io/kyverno/test-busybox:1.35
