other/add-nodeSelector/.chainsaw-test/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: bb
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  nodeSelector:
    foo: something
    bar: foo
    color: blue
  containers:
  - name: bb
    image: ghcr.io/kyverno/test-busybox:1.35
