other/add-nodeSelector/.chainsaw-test/podcontroller-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      nodeSelector:
        foo: something
        bar: foo
        color: blue
      containers:
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
